--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,3 +13,7 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: root
+rocketmq:
+  name-server: 127.0.0.1:9876
+  producer:
+    group: a-group
