--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,3 +13,6 @@ spring:
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: root
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
